fixed spacing

--- a/index.css
+++ b/index.css
@@ -13,12 +13,12 @@ header {
   flex: 0 80px;
 }
 
-
 main {
-  flex: 1 calc(100 - 110px);
+  flex: 1 calc(100vh - 110px);
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
 }
 
 footer {
@@ -39,7 +39,6 @@ menu {
 
 menu .nav-item {
   padding: 0 0.3em;
-  align-items: left;
 }
 
 footer a {
